--- a/style.css
+++ b/style.css
@@ -16,11 +16,14 @@ body{
 
 
 nav{
+    width: 100%;
+    position: fixed;
+    top: 0px;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding-bottom: 40px;
-    margin-top: 20px;
+    margin-top: 15px;
+    transition: 0.5s;
 }
 
 nav img{
@@ -59,6 +62,8 @@ section{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 140px;
+    margin-bottom: 40px;
 }
 
 section h1{
@@ -74,4 +79,9 @@ section h1{
     margin: 20px 20px;
     padding: 10px;
     border-radius: 20px;
+}
+
+.product img{
+    margin-top: 20px;
+    width: 350px;
 }
